// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Input matches snapshot 1`] = `
<div
  className="sc-jqUVSM crDAat"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-kDDrLX xmRrO"
      data-question-number={1}
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-crXcEl gDzNQA"
      data-test-id="free-response-box"
      defaultValue=""
      onChange={[Function]}
      placeholder="Enter your response..."
      readOnly={true}
    />
    <div
      className="sc-iqcoie cJiYdJ"
    >
      <div>
        <span>
          0
           words
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm"
  >
    <div
      className="points"
      role="status"
    >
      <strong>
        Points: 
        1.0
      </strong>
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-ftvSup gRHhHP"
        disabled={true}
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        className="sc-ftvSup gRHhHP"
        data-test-id="submit-answer-btn"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Free Response Input renders leftInfoComponent component 1`] = `
<div
  className="sc-jqUVSM crDAat"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-kDDrLX xmRrO"
      data-question-number={1}
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-crXcEl kcVOIg"
      data-test-id="free-response-box"
      defaultValue=""
      onChange={[Function]}
      placeholder="Enter your response..."
      readOnly={false}
    />
    <div
      className="sc-iqcoie fjWNFn"
    >
      <div>
        <span
          className="last-submitted"
        >
          Last submitted on July 26 at 4:00 pm
        </span>
      </div>
      <div>
        <span>
          0
           words
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm"
  >
    <div
      className="points"
      role="status"
    >
      <strong>
        Points: 
        1.0
      </strong>
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-ftvSup gRHhHP"
        disabled={true}
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        className="sc-ftvSup gRHhHP"
        data-test-id="submit-answer-btn"
        disabled={false}
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Free Response Input renders word limit error 1`] = `
<div
  className="sc-jqUVSM crDAat"
  data-test-id="student-free-response"
>
  <div
    className="step-card-body"
  >
    <div
      className="sc-kDDrLX xmRrO"
      data-question-number={1}
    >
      <div
        className="question-stem"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Is this a question?",
          }
        }
      />
    </div>
    <textarea
      aria-label="question response text box"
      className="sc-crXcEl gwOXPr"
      data-test-id="free-response-box"
      defaultValue="response has more than five words"
      onChange={[Function]}
      placeholder="Enter your response..."
      readOnly={false}
    />
    <div
      className="sc-iqcoie cJiYdJ"
    >
      <div>
        <span>
          6
           words
        </span>
        <span
          className="word-limit-error-info"
        >
          Maximum 
          5
           words
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-papXJ hujQqm"
  >
    <div
      className="points"
      role="status"
    >
      <strong>
        Points: 
        1.0
      </strong>
    </div>
    <div
      className="controls"
    >
      <button
        className="sc-ftvSup gRHhHP"
        disabled={true}
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        className="sc-ftvSup gRHhHP"
        data-test-id="submit-answer-btn"
        disabled={true}
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
